Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias dicta unde ipsam, hic maiores ullam quibusdam. Voluptas, perspiciatis a omnis optio beatae ipsam cumque voluptate sequi modi sapiente autem quibusdam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ut hic corporis ipsa ullam facere repellat officia. Sunt, necessitatibus esse, unde facere amet placeat itaque assumenda ea soluta ipsum odit.</p>
 </body>
 </html>
